--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         
         <div class="item active" style="background-image: url(images/slider/nasa-63029.jpg); background-size: cover;">
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">Launch analytics to <span>a new level</span> with iX Systems</h1>
+            <h1 class="animated fadeInLeftBig">Take your storage to <span>new heights</span> with iX Systems</h1>
             <p class="animated fadeInRightBig">Functional Demos&nbsp; &nbsp;|&nbsp; &nbsp;Hands-on Private Demos&nbsp; &nbsp;|&nbsp; &nbsp;POC&nbsp; &nbsp;|&nbsp; &nbsp;Benchmarks&nbsp; &nbsp;|&nbsp; &nbsp;dataset demos</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Learn More</a>
           </div>
