--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         
          <div class="item" style="background-image: url(images/slider/thumb-1920-242394.jpg)">
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">TrueNAS from ix systems -  <span>King of the NAS World!</span></h1>
+            <h1 class="animated fadeInLeftBig">TrueNAS from ix systems - <span>The King of the NAS Jungle!</span></h1>
             <p class="animated fadeInRightBig">Five minute deployment on Kodiak Data Clouds&nbsp; &nbsp;|&nbsp; &nbsp;No scripting &nbsp; &nbsp;|&nbsp; &nbsp;Any stack</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Explore</a>
           </div>
