--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                   	<p>MemCloud&trade; - <a href="https://goo.gl/WpRIYI"><span>(presentation)</span></a></p>
                 </div>
                 <div class="item">                                
-                  <p>CloudWorks&trade; - <a href="http://iX Systems.memcloud.works"><span>Dashboard</span></a></p>
+                  <p>CloudWorks&trade; - <a href="http://ix.memcloud.works"><span>Dashboard</span></a></p>
                 </div>
                 <div class="item">                                
                   <p>Solution Brief - <a href="../docs/memcloud-hadoop_1.pdf"><span>Hadoop in MemCloud&trade;</span></a></p>
