--- a/democlient-cred-email.html
+++ b/democlient-cred-email.html
@@ -1,5 +1,8 @@
 Demo access URL is - {{demoaccessurl}}
 
+Download your OpenSSL VPN profile here - {{demovpnprofile}}
+After establishing VPN you can access ssh at - {{demosshcreds}}
+Root access is - {{demoaccess-creds}}
 
 
 ------------------------------------------------------------------------------------
