--- a/democlient-cred-email.html
+++ b/democlient-cred-email.html
@@ -1,4 +1,19 @@
 Demo access URL is - {{demoaccessurl}}
+Demo access URL is - {{demoaccessurl}} 
+Download your OpenSSL VPN profile here - {{demovpnprofile}}
+After establishing VPN you can access ssh at - {{demosshcreds}}
+Root access is - {{demoaccess-creds
+
+Use within the next 4 hours
+
+Do not reply to this email - contact support@kodiakdata.com if you need assistance
+
+Learn more about iX Systems at -   https://www.ixsystems.com/
+Learn more about TrueNAS at -  https://www.ixsystems.com/truenas/
+
+------------------------------------------------------------------------------------
+Kodiak corporate website      -    http://www.kodiakdata.com
+Learn more about MemCloud at  -    http://info.kodiakdata.com
 
 
 ------------------------------------------------------------------------------------
