--- a/democlient-cred-email.html
+++ b/democlient-cred-email.html
@@ -1,8 +1,8 @@
-Demo access URL is - {{demoaccessurl}}
-Demo access URL is - {{demoaccessurl}} 
-Download your OpenSSL VPN profile here - {{demovpnprofile}}
-After establishing VPN you can access ssh at - {{demosshcreds}}
-Root access is - {{demoaccess-creds
+Demo access URL is - {{demoaccessurl | safe }}
+
+Download your OpenSSL VPN profile here - {{demovpnprofile | safe }}
+After establishing VPN you can access ssh at - {{demosshcreds | safe }}
+Root access is - {{demoaccess-creds | safe }}
 
 Use within the next 4 hours
 
