--- a/democlient-cred-email.html
+++ b/democlient-cred-email.html
@@ -1,4 +1,4 @@
-Demo access URL is - {{demoaccessurl | safe }}
+Access URL is - {{demoaccessurl | safe }}
 
 Download your OpenSSL VPN profile here - {{demovpnprofile | safe }}
 After establishing VPN you can access ssh at - {{demosshcreds | safe }}
