--- a/democlient-cred-email.html
+++ b/democlient-cred-email.html
@@ -1,8 +1,8 @@
-Access URL is - {{demoaccessurl | safe }}
+Access URL is - {{xxx | safe }}
 
 Download your OpenSSL VPN profile here - {{demovpnprofile | safe }}
 After establishing VPN you can access ssh at - {{demosshcreds | safe }}
-Root access is - {{demoaccess-creds | safe }}
+Root access is - {{zzz | safe }}
 
 Use within the next 4 hours
 
