--- a/democlient-cred-email.html
+++ b/democlient-cred-email.html
@@ -1,10 +1,12 @@
-Access URL is - {{xxx | safe }}
-
 Download your OpenSSL VPN profile here - {{demovpnprofile | safe }}
-After establishing VPN you can access ssh at - {{demosshcreds | safe }}
-Root access is - {{zzz | safe }}
 
-Use within the next 4 hours
+After establishing VPN to your demo on MemCloud
+
+TrueNAS access URL is  - {{accessurl | safe }}
+Login credentials are  - {{rootcreds | safe }}
+SSH credentials are    - {{demosshcreds | safe }}
+
+***Use within the next 4 hours***
 
 Do not reply to this email - contact support@kodiakdata.com if you need assistance
 
@@ -15,7 +17,5 @@ Learn more about TrueNAS at -  https://www.ixsystems.com/truenas/
 Kodiak corporate website      -    http://www.kodiakdata.com
 Learn more about MemCloud at  -    http://info.kodiakdata.com
 
-------------------------------------------------------------------------------------
-Kodiak corporate website      -    http://www.kodiakdata.com
-Learn more about MemCloud at  -    http://info.kodiakdata.com
+
 
