converted parameters to json

--- a/democlient-cred-email.html
+++ b/democlient-cred-email.html
@@ -1,8 +1,10 @@
-Download your OpenSSL VPN profile here - {{demovpnprofile | safe }}
+Download your OpenSSL VPN profile here - {{thisdemoaccount.ovpnlink | safe }}
 
 After establishing VPN to your demo on MemCloud
-    TrueNAS access URL is  - {{accessurl | safe }}
-    Login credentials are  - {{rootcreds | safe }}
+    TrueNAS access URL is  - {{thisdemoaccount.accessurl | safe }}
+    Login credentials are  - {{thisdemoaccount.rootcreds | safe }}
+    NFS mount link is      - {{thisdemoaccount.nfscreds  | safe }}
+
 
 ***Use within the next 4 hours***
 
