--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
             </div>
           </div>
           <div class="col-sm-4 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="850ms">
+		<a href="http://ix.memcloud.works">
             <div class="service-icon">
               <i class="fa fa-code"></i>
             </div>
-            
-			<div class="service-info"><a href="http://ix.memcloud.works">
+            <div class="service-info">
               <h3>Access Demo</h3>
-              <p>Access the online demo for iX Systems on Kodiak MemCloud&trade;</p></a>
+              <p>Access the online demo for iX Systems on Kodiak MemCloud&trade;</p>
             </div>            
-           
+           </a>
           </div>
         </div>
       </div>
