--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
        <div class="heading " >
         <div class="row">
           <div class="text-center col-sm-8 col-sm-offset-2">
-            <h2>More Information from Kodiak Data and Altinity</h2>           
+            <h2>More Information from Kodiak Data and iX Systems</h2>           
  			<p></p><br>
 			<i class="fa fa-desktop fa-2x"></i><br><h3>Links, microsites and other collateral</h3>         
        		</div>
