--- a/prelogin-banner.html
+++ b/prelogin-banner.html
@@ -1,3 +1,10 @@
-
+<div align="center">
+  Welcome to Cloudworks portal for iX Systems !
+  
+  Please log in if you already have an account here.
+  If you do not have an account - please sign up below.
+  (middle white button at the bottom with signup logo)
+  
+</div>
 
 
