--- a/prelogin-banner.html
+++ b/prelogin-banner.html
@@ -1,9 +1,12 @@
 <div align="center">
-  Welcome to Cloudworks portal for iX Systems !
+  Welcome to Cloudworks portal for iX Systems !<br><br>
   
+  <p>
   Please log in if you already have an account here.
   If you do not have an account - please sign up below.
-  (middle white button at the bottom with signup logo)
+  </p>
+  
+  <strong>(middle white button at the bottom with signup logo)</strong>
   
 </div>
 
