--- a/loggedin-banner.html
+++ b/loggedin-banner.html
@@ -1,7 +1,4 @@
 <div align="center">
-  Welcome to Cloudworks portal for iX Systems !
-  
- Thanks for logging in.
+ Welcome to Cloudworks portal for iX Systems! Thanks for logging in.<br><br>
  Please select your actions from the menu buttons below.
-  
 </div>
