--- a/prelogin-banner.html
+++ b/prelogin-banner.html
@@ -1,5 +1,5 @@
 <div align="center">
-  Welcome to Cloudworks portal for iX Systems !<br><br>
+  <h2>Welcome to Cloudworks portal for iX Systems</h2><br><br>
   
   <p>
   Please log in if you already have an account here.
