--- a/prelogin-banner.html
+++ b/prelogin-banner.html
@@ -1,13 +1,8 @@
 <div align="center">
-  <h2>Welcome to Cloudworks portal for iX Systems</h2><br><br>
+  <h3>Welcome to Cloudworks portal for iX Systems</h3><br><br>
   
-  <p>
-  Please log in if you already have an account here.
-  If you do not have an account - please sign up below.
-  </p>
-  
-  <strong>(middle white button at the bottom with signup logo)</strong>
-  
+   <br>
+    Please login to your Cloudworks account or sign up for the new account (the button at the center below)
+  <br>
+(c) 2017 Kodiak Data, Inc.
 </div>
-
-
