--- a/loggedin-banner.html
+++ b/loggedin-banner.html
@@ -1,4 +1,6 @@
 <div align="center">
- Welcome to Cloudworks portal for iX Systems! Thanks for logging in.<br><br>
- Please select your actions from the menu buttons below.
+  <h2>Welcome to Cloudworks!</h2>
+  Now you may navigate to the drop-down menu below and select a service or request a demo.<br>
+  Cloudworks will send you a confirmation email with instructions and necessary credentials.<br><br>
+  (please make sure to check your spam folder if you have not received the email within a few minutes)
 </div>
